...
    <string name="previous">Previous</string>
    <string name="default_photo_url">https://www.personality-insights.com/wp-content/uploads/2017/12/default-profile-pic-e1513291410505.jpg</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="photo_url">Photo URL</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="please_provide_a_url_that_contains_a_headshot_photo_of_yourself">Please provide a URL that contains a headshot photo of yourself:</string>
    <string name="course_no">Course No.</string>
    <string name="subject">Subject</string>
    <string name="quarter">Quarter</string>
    <string name="year">Year</string>
    <string name="done">Done</string>
    <string name="enter">Enter</string>
    <string name="classes">Enter Past Classes:</string>
    <string name="enter_classes_description">Enter all of the classes you have previously taken to match with students from those classes</string>
    <string name="classes_you_share">Classes you share</string>
    <string name="back">BACK</string>
    <string name="start">START</string>
    <string name="bof">BoF</string>
    <string name="add_mock">Add mock</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="confirm">Confirm</string>
    <string name="first_name">First Name:</string>
    <string name="cse">CSE</string>
    <string name="_110">110</string>
    <string name="class_size">Class Size:</string>
    <string name="skip_text">SKIP</string>
    <string name="sort">Sort:</string>
    <string name="enter_people_here">Enter People Here</string>
    <string name="add">Add</string>
    <string name="wave">WAVE</string>
    <string name="confirm_text">CONFIRM</string>
    <string name="name">Name</string>
...
